--- a/src/main/webapp/start.xhtml
+++ b/src/main/webapp/start.xhtml
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui">
+<html xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:p="http://primefaces.org/ui"
+      xmlns="http://www.w3.org/1999/xhtml">
 <h:head>
     <title>Лабораторная работа №3</title>
-    <h:outputStylesheet name="css/style.css" />
+    <h:outputStylesheet name="css/style.css"/>
 </h:head>
 <h:body>
     <header>
@@ -14,11 +13,11 @@
     </header>
 
     <h2>Текущее время:</h2>
-    <h:outputText id="clock" value="#{startBean.currentDateTime}" />
+    <h:outputText id="clock" value="#{startBean.currentDateTime}"/>
 
-    <p:poll interval="5" update="clock" />
+    <p:poll interval="5" update="clock"/>
 
     <br/><br/>
-    <h:link value="Перейти к приложению" outcome="main" styleClass="submit-button" />
+    <h:link value="Перейти к приложению" outcome="main" styleClass="submit-button"/>
 </h:body>
 </html>
