--- a/src/main/webapp/start.xhtml
+++ b/src/main/webapp/start.xhtml
@@ -4,9 +4,9 @@
       xmlns="http://www.w3.org/1999/xhtml">
 <h:head>
     <title>Лабораторная работа №3</title>
-    <h:outputStylesheet name="css/style.css"/>
+    <h:outputStylesheet name="css/result.css"/>
 </h:head>
-<h:body>
+<h:body styleClass="start-page">
     <header>
         <h1>Глотова Дарья</h1>
         <p>Группа: P3210 | Вариант: 91</p>
@@ -17,7 +17,6 @@
 
     <p:poll interval="5" update="clock"/>
 
-    <br/><br/>
     <h:link value="Перейти к приложению" outcome="main" styleClass="submit-button"/>
 </h:body>
 </html>
